# hivebox

./: .gitignore  AGENT.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  mcp.json
config/: hivebox.openrc  hivebox.toml  seccomp-default.json  seccomp-strict.json
docs/: api.md  architecture.md  cli.md  deployment.md  security.md
images/: base.sh
scripts/: build-images.sh  entrypoint.sh  setup.sh
src/: main.rs
src/api/: dashboard.rs  handlers.rs  mcp.rs  mod.rs  opencode.rs  types.rs
src/cli/: mod.rs
src/images/: builder.rs  mod.rs
src/mcp/: mod.rs
src/runtime/: cleanup.rs  exec.rs  mod.rs
src/sandbox/: capabilities.rs  cgroup.rs  filesystem.rs  landlock.rs  manager.rs  mod.rs  namespace.rs  network.rs  seccomp.rs
tests/: api_test.py  escape_test.sh  isolation_test.sh  stress_test.sh
